docroot/themes/custom/transac/alshaya_white_label/conditional-sass/store-finder/component/_store-finder.scss
/* ... */
.scroll-fix {
  overflow: hidden;
  white-space: nowrap;
  font-family: $arial;

  .location-content {
    white-space: normal;
  }

  @include breakpoint($tablet) {
    width: 15.625rem;
  }
}

.gm-style-iw {
  max-width: none !important;

  > div {
    max-width: none !important;
  }
}

.path--store-finder .store-finder--wrapper .input--wrapper [id^=edit-actions] {
  @include breakpoint($desktop) {
    #{$right}: 0.5rem;
  }
}

